feat: complier error fixed & tag crud